# rubble

./: Cargo.toml  README.md
crates/rubble/: Cargo.toml
crates/rubble-nrf5x/: Cargo.toml
crates/rubble-tests/: Cargo.toml
crates/rubble/src/: bytes.rs  uuid.rs
crates/rubble/src/att/: mod.rs  pdus.rs  server.rs  uuid.rs
crates/rubble/src/ecdh/: mod.rs  p256.rs  ring.rs
crates/rubble/src/gatt/: mod.rs
crates/rubble/src/l2cap/: mod.rs
crates/rubble/src/link/: advertising.rs  channel_map.rs  connection.rs  llcp.rs  mod.rs  queue.rs
examples/example-utils/: Cargo.toml
examples/nrf52-beacon/: Cargo.toml
examples/nrf52-demo/: Cargo.toml
examples/nrf52-demo/src/: logger.rs
rubble/src/: uuid.rs
