[package]
name = "rubble"
version = "0.0.4"
edition = "2021"

[dependencies]
bitflags = "1"
heapless = "0.7"
rand_core = "0.6"
sha2 = { version = "0.10", default-features = false }
zerocopy = "0.6"
defmt = "0.3"

p256 = { version = "0.13", default-features = false, features = ["arithmetic"] }

# The `ring` feature can be enabled to provide P-256 operations for non-embedded use cases.
ring = { version = "0.16", default-features = false, optional = true }

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
log = { version = "0.4", optional = true }

[dev-dependencies]
ring = "0.16.9"
