[package]
name = "nrf52-demo"
version = "0.0.1"
edition = "2021"

[dependencies]
rubble = { path = "../../crates/rubble", default-features = false }
rubble-nrf5x = { path = "../../crates/rubble-nrf5x" }
example-utils = { path = "../example-utils" }
cortex-m = "0.7.2"
cortex-m-rtic = { version = "0.5.8", default-features = false, features = ["cortex-m-7"] }
cortex-m-rt = "0.7.0"
bbqueue = "0.4"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

nrf52810-hal = { version = "0.14", features = ["rt"], optional = true }
nrf52811-hal = { version = "0.14", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.14", features = ["rt"], optional = true }
nrf52833-hal = { version = "0.14", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.14", features = ["rt"], optional = true }

[dependencies.log]
version = "0.4.8"
features = ["release_max_level_warn"]
optional = true

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf52-demo"
doc = false
test = false

[features]
# Note: To turn this default feature off you must run Cargo from inside the demo
# directory, not from the workspace root.
default = ["rubble/log", "log"]
52810 = ["rubble-nrf5x/52810", "nrf52810-hal"]
52811 = ["rubble-nrf5x/52811", "nrf52811-hal"]
52832 = ["rubble-nrf5x/52832", "nrf52832-hal"]
52833 = ["rubble-nrf5x/52833", "nrf52833-hal"]
52840 = ["rubble-nrf5x/52840", "nrf52840-hal"]
